Avoid overlap with chevron at small widths

--- a/app/assets/sass/explore.scss
+++ b/app/assets/sass/explore.scss
@@ -178,6 +178,7 @@ $wide-width: 1300px;
     .govuk-accordion__section {
       button {
         color: govuk-colour("black");
+        padding-right: 40px;
       }
       &:hover {
         background-color: #f3f2f1;
